Fix dark mode CSS issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,13 @@
   line-height: 1.5;
   font-weight: 900;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: light-dark(#0d0d0d, #ececec);
-  background: light-dark(#f3f3f3, #171717);
+  background: light-dark(#f3f3f3, #171717); */
+
+  color: #0d0d0d;
+  background-color: #f3f3f3;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
